--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,8 +1,6 @@
 ---
-import { getCollection } from "astro:content";
-
 import { kUrlBase, kSiteLogo, kSiteSourceUrl } from "$consts";
-import { ArchiveButton, ThemeToggle } from "$components";
+import { ThemeToggle } from "$components";
 import HeaderLink from "./HeaderLink.astro";
 
 interface Props {
@@ -10,7 +8,6 @@ interface Props {
 }
 
 const { articleId } = Astro.props;
-const pdfArchives = await getCollection("archive");
 ---
 
 <header>
@@ -23,13 +20,6 @@ const pdfArchives = await getCollection("archive");
       <HeaderLink href={`${kUrlBase}/about`}>About</HeaderLink>
     </div>
     <div class="social-links">
-      <span style="width: 2em;" aria-hidden="true">&nbsp;</span>
-      <ThemeToggle />
-      {
-        articleId && (
-          <ArchiveButton articleId={articleId} pdfArchives={pdfArchives} />
-        )
-      }
       {
         kSiteSourceUrl && (
           <a
@@ -45,6 +35,7 @@ const pdfArchives = await getCollection("archive");
           </a>
         )
       }
+      <ThemeToggle />
     </div>
   </nav>
 </header>
