--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,6 +18,10 @@ const { articleId } = Astro.props;
       <HeaderLink href={`${kUrlBase}/article`}>Posts</HeaderLink>
       <HeaderLink href={`${kUrlBase}/friend`}>Friends</HeaderLink>
       <HeaderLink href={`${kUrlBase}/about`}>About</HeaderLink>
+      <div class="theme-toggle-wrapper">
+        <span class="theme-label">深/浅色</span>
+        <ThemeToggle />
+      </div>
     </div>
     <div class="social-links">
       {
@@ -35,7 +39,6 @@ const { articleId } = Astro.props;
           </a>
         )
       }
-      <ThemeToggle />
     </div>
   </nav>
 </header>
@@ -63,7 +66,7 @@ const { articleId } = Astro.props;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    max-width: min(56rem, calc(100% - 2em));
+    max-width: min(70rem, calc(100% - 2em));
     margin: auto;
   }
   nav a {
@@ -79,10 +82,32 @@ const { articleId } = Astro.props;
   .social-links a {
     display: flex;
   }
+  .theme-toggle-wrapper {
+    display: flex;
+    align-items: center;
+    margin-left: 1em;
+    padding: 0.5em;
+    border-radius: 0.5em;
+    background-color: var(--raw-bg-color);
+    position: relative;
+    z-index: 20;
+  }
+  .theme-label {
+    margin-right: 0.5em;
+    font-size: 0.9em;
+    color: var(--main-color);
+  }
   @media (max-width: 680px) {
     .logo,
     .social-links a.ls-icon {
       display: none;
+    }
+    .theme-toggle-wrapper {
+      margin-left: 0.5em;
+      padding: 0.3em;
+    }
+    .theme-label {
+      font-size: 0.8em;
     }
   }
   @media (max-width: 400px) {
