--- a/src/pages/article/index.astro
+++ b/src/pages/article/index.astro
@@ -45,8 +45,8 @@ const filteredPosts = searchFilter ? posts.filter(post => post.data.tags && post
   <body>
     <Header />
     {kEnableSearch && <Search />}
-    <main style="display: flex; gap: 2em; align-items: flex-start;">
-      <div style="flex: 1 1 20%; min-width: 12em; max-width: 20vw;">
+    <main style="display: flex; gap: 2.5em; align-items: flex-start;">
+      <div style="flex: 1 1 20%; min-width: 14em; max-width: 18em;">
         <TagSidebar />
       </div>
       <div style="flex: 3 1 0; min-width: 0;">
