--- a/packages/create-tylant/templates/minimal/src/pages/article/[...slug].astro
+++ b/packages/create-tylant/templates/minimal/src/pages/article/[...slug].astro
@@ -5,15 +5,15 @@ import { type CollectionEntry, getCollection } from "astro:content";
 import BlogPost from "$layouts/BlogPost.astro";
 
 export async function getStaticPaths() {
-  const posts = await getCollection("blog");
-  return posts.map((post) => ({
+  const posts: CollectionEntry<"blog">[] = await getCollection("blog");
+  return posts.map((post: CollectionEntry<"blog">) => ({
     params: { slug: post.id },
     props: post,
   }));
 }
 type Props = CollectionEntry<"blog">;
 
-const post = Astro.props;
+const post: Props = Astro.props as Props;
 const { Content } = await render(post);
 ---
 
